--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,27 @@
 attrs==22.2.0
 boto3==1.26.93
 botocore==1.29.93
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+cryptography==39.0.2
+idna==3.4
 iniconfig==2.0.0
+Jinja2==3.1.2
 jmespath==1.0.1
+MarkupSafe==2.1.2
+moto==4.1.4
 packaging==23.0
 pluggy==1.0.0
+pycparser==2.21
 pytest==7.2.2
 python-dateutil==2.8.2
+PyYAML==6.0
+requests==2.28.2
+responses==0.23.1
 s3transfer==0.6.0
 six==1.16.0
+types-PyYAML==6.0.12.8
 urllib3==1.26.15
+Werkzeug==2.2.3
+xmltodict==0.13.0
