--- a/.pylintrc
+++ b/.pylintrc
@@ -1,7 +1,6 @@
 [FORMAT]
 max-line-length=120
-disable = missing-docstring
+disable = missing-docstring, unnecessary-lambda-assignment
 min-public-methods=0
-disable=unused-argument
 # Set the Python path
 init-hook='import sys; sys.path.append("./src")'
