--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.11"]
+        python-version: ["3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v3
@@ -25,12 +25,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-  
+
       - name: Run pytest and pylint
         run: |
           pytest
           pylint --fail-under=9 src/cc_sdk/*.py
-  
+
       - name: Stop the build if there are any linting errors or test failures
         run: |
           if [ $? -eq 0 ]; then
@@ -39,4 +39,3 @@ jobs:
             echo "There are test failures or linting errors. Aborting the build." >&2
             exit 1
           fi
-  
