--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,8 @@ name = "cc_sdk"
 version = "0.0.1"
 authors = [
   { name="Will Lehman", email="William.P.Lehman@usace.army.mil" },
+  { name="Brendan Barnes", email="brendan.barnes@mbakerintl.com" },
+  { name="Thomas Williams", email="thomas.williams@wsp.com" },
 ]
 description = "The Python SDK for developing plugins for Cloud Compute"
 readme = "README.md"
