--- a/.github/workflows/create_github_release.yml
+++ b/.github/workflows/create_github_release.yml
@@ -64,6 +64,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ github.workspace }}/dist/cc_sdk-${{ steps.get_version.outputs.version }}-py3-none-any.whl
-          asset_name: cc_sdk-${{ steps.get_version.outputs.version }}-py3-none-any.whl
+          asset_path: ${{ github.workspace }}/dist/cc_python_sdk-${{ steps.get_version.outputs.version }}-py3-none-any.whl
+          asset_name: cc_python_sdk-${{ steps.get_version.outputs.version }}-py3-none-any.whl
           asset_content_type: application/octet-stream
