--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+dependencies = [
+  'attrs >= 22.2.0',
+  'boto3 >= 1.26.93',
+]
 
 [project.urls]
 "Homepage" = "https://github.com/USACE/cc-python-sdk"
